--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PICE</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div>
-      <input type="number" name="decimal" id="decimal" />
+      <span id="pi">3,</span
+      ><input type="number" name="decimal" id="decimal" min="0" max="9" />
     </div>
+    <div id="log"></div>
     <script src="index.js"></script>
   </body>
 </html>
