sh: wq: command not found
sh: q: command not found

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <h1>Practice decimals of PI!</h1>
+    <p>Suppurts %d% decimals</p>
     <div>
       <span id="pi">3,</span
       ><input type="number" name="decimal" id="decimal" min="0" max="9" />
