--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Practice decimals of PI!</h1>
-    <p>Suppurts %d% decimals</p>
+    <p>Supports %d% decimals</p>
     <div>
       <span id="pi">3,</span
       ><input type="number" name="decimal" id="decimal" min="0" max="9" />
