--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Practice decimals of PI!</h1>
     <p>Supports %d% decimals</p>
     <div>
-      <span id="pi">3,</span
+      <span id="pi">3.</span
       ><input type="number" name="decimal" id="decimal" min="0" max="9" />
     </div>
     <div id="log"></div>
