Reset on numpad

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </main>
       <div id="log"></div>
       <div class="numpad">
+        <button onclick="reset()">reset</button>
         <button id="btn1" onclick="handleInput(1)">1</button>
         <button id="btn2" onclick="handleInput(2)">2</button>
         <button id="btn3" onclick="handleInput(3)">3</button>
