History of splits

--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
       </main>
       <div id="stats" class="flex gap">
         <div id="time">
-          <div id="timer"></div>
-          <div id="fastest"></div>
           <p>Splits:</p>
-          <ol id="splits">
-            <!-- <li>10: 0.30 best: 0.28</li>
-            <li class="success">20: 1.01 new best!</li> -->
-          </ol>
+          <ol id="splits"></ol>
+        </div>
+        <div id="timelog">
+          <p>History:</p>
+          <ol id="history"></ol>
         </div>
         <div id="log"></div>
       </div>
