Fixed NaN when no prev best time

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
           <p>History:</p>
           <ol id="history"></ol>
         </div>
-        <div id="log"></div>
+        <div>
+          <p>Log:</p>
+          <div id="log"></div>
+        </div>
       </div>
       <div class="numpad">
         <button onclick="reset()">reset</button>
